--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "logintest",
-  "version": "0.1.0",
+  "name": "discordfoorumi",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
@@ -13,9 +13,13 @@
     "axios": "^0.19.2",
     "btoa": "^1.2.1",
     "discord-oauth2": "^2.0.2",
+    "dotenv": "^8.2.0",
+    "iso-639-1": "^2.1.0",
+    "mongoose": "^5.8.10",
     "query-string": "^6.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-paypal-button-v2": "^2.6.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
