--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "query-string": "^6.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-markdown": "^4.3.1",
     "react-paypal-button-v2": "^2.6.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
