--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "query-string": "^6.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-markdown": "^4.3.1",
     "react-paypal-button-v2": "^2.6.1",
     "react-redux": "^7.1.3",
